# immutable-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: db.rs  main.rs  utils.rs
src/handlers/: admin.rs  hug.rs  link_rewrite.rs  mod.rs  quotes.rs
