[package]
name = "immutable-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
log = "0.4"
pretty_env_logger = "0.5"